src/styles/ReviewListItem.scss
@import './helper';

.review-container{
  box-sizing: border-box;
  display:flex;
  flex-direction: column;
  border: none;
  border: 1px solid $gray-line;
  background-color: rgb(245, 243, 243);
  border-radius: 15px;
  padding: 12px 10px 5px 10px;
  width: 100%;
  margin: 2px 2px 15px 2px;
}

.review-container:hover {
  box-shadow: 0 0 3px 3px rgb(189, 188, 188);
}

.review-footer {
  @include flexbox(row, space-between, center);
  margin-left: 2px;
  margin-top: 5px;
  width: 100%;
}
.read-review-helpful-container {
  @include flexbox(row, space-between, center);
  max-width: 180px;
}
.rev-footer-container {
  @include flexbox(row, space-between, center);
  width: 100%;
}
.user {
  @include flexbox(row, flex-start, center);
  font-size: 18px;
  font-weight: bold;
}
.profile-img {
  height: 50px;
  width: 50px;
  border-radius: 50%;
  cursor: pointer;
}
.profile-img:hover {
  cursor: pointer;
  -moz-box-shadow:    0px 0px 7px 2px $salmon;
  -webkit-box-shadow: 0px 0px 7px 2px $salmon;
  box-shadow:         0px 0px 7px 2px $salmon;
  
}
.helpful-count {
  @include flexbox(row, center, center);
  left: 10px;
  height: 30px;
  width: 30px;
  min-width: 30px;
  margin-right: 5px;
}

.helpful {
  width: 30px;
  @include flexbox(row, flex-start, center);
}

.helpful-container {
  width: 80px;
  @include flexbox(row, flex-start, center);
}

.delete-button {
  @include flexbox(row, center, center);
  left: 10px;
  height: 30px;
  width: 30px;
  min-width: 30px;
  margin-right: 5px;
}

.delete-button:hover {
  color: $salmon;
  cursor: pointer;
}

.editable {
  cursor: pointer;
}

.editable:hover {
  color: $salmon;
}

.edit-delete-container {
  @include flexbox(row, flex-start, center);
  margin-right: 5px;
}
.header-container {
  width: 100%;
  @include flexbox(row, space-between, center);
}

@media screen and (max-width: 845px) {
  .header-container {
    @include flexbox(column, flex-start, flex-start);    
  }
}

.helpful-count-user {
  left: 10px;
}


.edit-button {
  left: 10px;
  height: 24px;
  width: 24px;
  cursor: pointer;
}

.review-numbers {
  @include flexbox(row, space-between, flex-start);
  margin-top: 10px;
}

.review-content {
  margin-top: 12px;
  max-height: 60px;
  margin-bottom: 0px;
}

.review-table {
  width: 120px;
}

.table-row {
  @include flexbox(row, flex-start, center);
}

.left {
  @include flexbox(row, flex-start, center);
  width: 85px;
  font-size: 14px;
  margin-left: 9px;
}
.right {
  @include flexbox(row, flex-end, center);
  width: 40px;
  font-size: 14px;
}

.review-list-description {
  width: 100%;
  max-height: 90px;
  margin-left: 2px;
  text-overflow: ellipsis;
}

.review-list-description-short {
  max-height: 42px;
  height: 42px;
  display: -webkit-box;
  margin-left: 2px;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.review-date {
  font-size: 14px;
  font-weight: normal;
  font-style: italic;
}
.home-name-label {
  align-self: flex-end;
  justify-self: flex-end;
  padding-right: 20px;
  font-weight: bold;
  padding-bottom: 20px;  
  
}

.time-ago {
  font-size: 12px;
  font-weight: normal;
  font-style: italic;
}

.sort-group {
  @include flexbox(row, space-between, center);
  width: 100%;
}


.reviews-list-container {
  width: 100%;
}

.username-date {
  @include flexbox(column, flex-start, flex-start);
  height: 100%;
  margin-left: 5px;
  max-width: 145px;
}

.venue {
  width: 100%;
  font-weight: bold;
  @include flexbox(row, flex-start, center);
  margin-left: 5px;
}

.link-to-review {
  font-size: 13px;
  width: 110px;
  color: #363f47;
  font-weight: bold;
  @include flexbox(row, flex-start, center);
}


.link-to-review:hover {
  color: $salmon;
  cursor: pointer;
}

.review-header-link {
  font-weight: bold;
  text-align: left;
  color:  #363f47;
}

.review-header-link:hover {
  font-weight: bold;
  color: $salmon;
  cursor: pointer;
}

.review-title-container {
  width: 100%;
  @include flexbox(row, flex-start, center);
}

.review-title:hover {
  font-weight: bold;
  color: $salmon;
  cursor: pointer;
}

.review-title {
  @include flexbox(row, flex-start, center);
  margin-left: 5px;
  margin-bottom: 8px;
  color: #363f47;
  font-style: 16px;
  font-weight: bold;
  width: 100%;
  padding-bottom: 3px;
  border-bottom: 1px solid $gray-line;
}

